cmake (2.6.4-2) UNRELEASED; urgency=low

  * Prefer *-qt3 binary names to generic ones in FinqQt3.cmake
    (Closes: #538864).
  * Fix bashisms in CMake scripts (Closes: #530056).
  * Merge in 2.6.0-6 debian/changelog.

 -- Modestas Vainius <modestas@vainius.eu>  Sat, 08 Aug 2009 10:58:18 +0300

cmake (2.6.4-1) unstable; urgency=low

  * New upstream release.
  * Resync patches:
    - relative_path_fixes2.diff - removed, merged upstream;
    - FindQt4_qt4_lupdate_lrelease.diff - removed, merged upstream.
  * Bump Standards-Version to 3.8.1. No changes needed.
  * Remove deprecated dh_desktop from debian/rules.
  * Update manpage_friendly_docs.diff patch to fix more lintian warnings.

 -- Modestas Vainius <modestas@vainius.eu>  Sat, 02 May 2009 01:28:29 +0300

cmake (2.6.3-2) unstable; urgency=low

  * Remove do-not-use-lib64.diff, no longer needed (according to upstream).
  * Remove reinstate-arm.diff, merged upstream.
  * Upload to unstable.

 -- Modestas Vainius <modestas@vainius.eu>  Sat, 07 Mar 2009 15:13:56 +0200

cmake (2.6.3-1) experimental; urgency=low

  * New upstream release.
  * Update debian/patches:
    - remove find_package_support_prefix_lib_cmake.diff, merged upstream;
    - adopt FindQt4.cmake2.6.diff;
    - refresh do-not-use-lib64.diff;
    - remove relative_path_fixes.diff, merged upstream;
    - refresh relative_path_fixes2.diff;
    - remove manpage-generation-fixes.diff, merged upstream;
    - refresh FindQt4_qt4_lupdate_lrelease.diff;
    - remove FindMPEG2_include_FindSDL_fix.diff, merged upstream;
  * Use dh_prep instead of deprecated dh_clean -k (fixes lintian warning).
  * Call dh_desktop in the binary targets (fixes lintian warning).
  * Install cmake-gui docs to the cmake-qt-gui package.
  * Enable binary-indep target.
  * Add manpage_friendly_docs.diff patch to make some bits of documentation
    manpage friendly (eliminate warnings).
  * Fix installation of lintian overrides (move dh_lintian to binary targets).
