@@ -4,8 +4,9 @@ cmake (2.6.4-2) UNRELEASED; urgency=low
     (Closes: #538864).
   * Fix bashisms in CMake scripts (Closes: #530056).
   * Merge in 2.6.0-6 debian/changelog.
+  * Use quilt.make rather than custom quilt patch implementation.
 
- -- Modestas Vainius <modestas@vainius.eu>  Sat, 08 Aug 2009 10:58:18 +0300
+ -- Modestas Vainius <modestas@vainius.eu>  Sat, 08 Aug 2009 11:02:22 +0300
 
 cmake (2.6.4-1) unstable; urgency=low
 
